<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/login_container"
    android:background="#d8d8d8"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.com.outlookcolumbus.android.outlook.LoginActivity"
    >


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"

            >

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:orientation="vertical"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    >
                    <!-- "#7c7c7c"-->
                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"/>

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"/>

                    <Button
                        android:id="@+id/email_sign_in_button"
                        style="?android:textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:background="@drawable/button_background"
                        android:text="@string/action_sign_in"

                        android:textColor="#ffffff"/>



                    <Button android:id="@+id/register_button"
                            style="?android:textAppearanceMedium"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:layout_alignParentLeft="true"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/register_action"
                            android:textColor="#ffffff"
                            android:background="@drawable/button_background"/>

                    <Button android:id="@+id/forgot_button"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/action_forgot_pass"
                        android:textColor="#ffffff"
                        android:background="@drawable/button_background"/>


                </LinearLayout>


        </ScrollView>


</LinearLayout>



